# dataclasses-jsonschema

./: .gitignore  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
dataclasses_jsonschema/: __init__.py  type_defs.py  type_hints.py
tests/: test_apispec_plugin.py  test_core.py  test_peps.py
